...
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/label_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/type_container"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/add_new_billable_name_label"
            android:imeOptions="actionNext"
            android:inputType="textCapWords|textNoSuggestions" />
...
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/unit_container"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/price_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/add_new_billable_price_label"
                android:inputType="number"
                android:imeOptions="actionDone" />
...
