<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_encounter_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/encounter_item_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="@dimen/space8"
        android:paddingBottom="@dimen/fragment_padding"
        android:paddingLeft="@dimen/fragment_padding"
        android:paddingRight="@dimen/fragment_padding"
        android:elevation="@dimen/panelElevation">

        <!--hacky method to add box around spinner without rewriting material design styles-->
        <android.support.constraint.ConstraintLayout
            android:id="@+id/select_type_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space8"
            android:background="@drawable/view_outline_rectangle"
            app:layout_constraintTop_toTopOf="parent">

            <Spinner
                android:id="@+id/type_spinner"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/viewHeight40" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/select_billable_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space8"
            android:background="@drawable/view_outline_rectangle"
            app:layout_constraintTop_toBottomOf="@id/select_type_box">

            <Spinner
                android:id="@+id/billable_spinner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/viewHeight40"
                android:visibility="gone" />

            <SearchView
                android:id="@+id/drug_search"
                android:layout_width="match_parent"
                android:layout_height="@dimen/viewHeight40"
                android:iconifiedByDefault="false"
                android:queryHint="@string/search_drug_hint"
                android:queryBackground="@android:color/transparent"
                android:inputType="textFilter"
                android:visibility="gone" />

        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/encounter_item_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space8"
            app:layout_constraintTop_toBottomOf="@id/select_billable_box"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/line_items_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingBottom="@dimen/scrollingFragmentBottomPadding"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/encounter_item_panel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/save_button_wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space16"
            style="@style/PrimaryButton"
            app:layout_behavior="org.watsi.uhp.behaviors.MovableButtonBehavior"
            android:text="@string/continue_encounter_button"
            android:layout_gravity="bottom" />
    </android.support.design.widget.CoordinatorLayout>
</android.support.constraint.ConstraintLayout>
