...
    <!-- MemberSearchFragment -->
    <string name="member_no_search_results_text" translatable="false">No search results found. Please try again.</string>
    <string name="search">Search</string>
    <string name="membership_number_search_label" tools:ignore="MissingTranslation">Search Membership Number</string>

    <!-- EncounterFragment -->
    <string name="encounter_fragment_label">Line items</string>
    <string name="prompt_category">Select a category&#8230;</string>
    <string name="search_drug_hint">Search&#8230;</string>
    <string name="error_blank_or_zero_quantity">Please enter a nonzero quantity</string>
    <string name="default_billable_quantity" translatable="false">1</string>
    <string name="continue_encounter_button">Next</string>
    <string name="done_encounter_button">Done</string>
...
        <item quantity="one">%d diagnosis</item>
        <item quantity="other">%d diagnoses</item>
    </plurals>
    <string name="search_diagnosis_hint">Search diagnoses&#8230;</string>

    <!-- ReceiptFragment -->
    <string name="receipt_fragment_label">Review Claim</string>
    <string name="submit_encounter_button">@string/submit</string>
    <string name="receipt_total">Total</string>
    <string name="encounter_submitted">Claim submitted</string>
    <string name="encounter_saved">Claim saved</string>
    <plurals name="receipt_line_item_count" >
        <item quantity="one">%d line item</item>
...
